--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>PDF Generator</title>
+        <title>Document Generator</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -15,7 +15,7 @@
                 <p>Generating PDF... Please wait.</p>
         </div>
         <div class="container">
-                <h2 class="text-center">Generate Solar PDF</h2>
+                <h2 class="text-center">Generate Document</h2>
                 <form id="pdfForm">
                         <div class="mb-3 form-group"><label>Inverter Capacity</label><input type="text"
                                         name="inverter_capacity" class="form-control" required></div>
