update form data validation

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,7 +41,7 @@
                                 <label>Serial Numbers</label>
                                 <input type="text" name="serial_numbers" class="form-control">
                         </div>
-                        <button type="submit" class="btn btn-primary w-100">Generate PDF</button>
+                        <button type="submit" class="btn btn-primary w-100">Generate Document</button>
                 </form>
                 <!-- <div id="download-links" class="text-center"></div> -->
         </div>
