--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,23 +17,23 @@
         <div class="container">
                 <h2 class="text-center">Generate Document</h2>
                 <form id="pdfForm">
-                        <div class="mb-3 form-group"><label>Inverter Capacity</label><input type="text"
+                        <div class="mb-3 form-group"><label>Inverter Capacity (KW)</label><input type="text"
                                         name="inverter_capacity" class="form-control" required></div>
                         <div class="mb-3 form-group"><label>Inverter Brand</label><input type="text"
                                         name="inverter_brand" class="form-control" required></div>
-                        <div class="mb-3 form-group"><label>Panel Capacity</label><input type="text"
+                        <div class="mb-3 form-group"><label>Panel Capacity (W)</label><input type="text"
                                         name="panel_capacity" class="form-control" required></div>
                         <div class="mb-3 form-group"><label>Panel Brand</label><input type="text" name="panel_brand"
                                         class="form-control" required></div>
                         <div class="mb-3 form-group"><label>Invoice Date</label><input type="date" name="invoice_date"
                                         class="form-control" id="invoice_date" required></div>
-                        <div class="mb-3 form-group"><label>Invoice Number</label><input type="text"
+                        <div class="mb-3 form-group"><label>Invoice Number (ME/2024-25/XXX)</label><input type="text"
                                         name="invoice_number" class="form-control" required></div>
                         <div class="mb-3 form-group"><label>Consumer Name</label><input type="text" name="consumer_name"
                                         class="form-control" required></div>
                         <div class="mb-3 form-group"><label>Consumer Address</label><textarea name="consumer_address"
                                         class="form-control"></textarea></div>
-                        <div class="mb-3 form-group"><label>Net Solar Capacity</label><input type="text"
+                        <div class="mb-3 form-group"><label>Net Solar Capacity (KW)</label><input type="text"
                                         name="net_solar_capacity" class="form-control" required></div>
                         <div class="mb-3 form-group"><label>Number of Panels</label><input type="number"
                                         name="no_of_panels" class="form-control" required></div>
