--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,7 +51,7 @@
                 <!-- <div id="download-links" class="text-center"></div> -->
         </div>
 
-
+        <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
         <script src="js/config.js"></script>
         <script src="js/script.js"></script>
 </body>
